--- a/gradle.properties
+++ b/gradle.properties
@@ -143,7 +143,7 @@ usesMavenPublishing = true
 #
 # The project's ID on Modrinth. Can be either the slug or the ID.
 # Leave this empty if you don't want to publish to Modrinth.
-modrinthProjectId =
+modrinthProjectId = C0xOkNfT
 
 # The project's relations on Modrinth. You can use this to refer to other projects on Modrinth.
 # Syntax: scope1-type1:name1;scope2-type2:name2;...
@@ -158,7 +158,7 @@ modrinthRelations =
 #
 # The project's numeric ID on CurseForge. You can find this in the About Project box.
 # Leave this empty if you don't want to publish on CurseForge.
-curseForgeProjectId =
+curseForgeProjectId = 1099276
 
 # The project's relations on CurseForge. You can use this to refer to other projects on CurseForge.
 # Syntax: type1:name1;type2:name2;...
